{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 249,
  "lineage": "caebc4a7-b8af-30ef-0086-459c3f530d72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1e1cf94c66db6a7",
            "association_id": "eipassoc-07c6f8e7a61858e96",
            "domain": "vpc",
            "id": "eipalloc-0d1e1cf94c66db6a7",
            "instance": "i-03c1b686441b0df93",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-090c8c951b3ce9fb8",
            "private_dns": "ip-172-16-10-100.eu-central-1.compute.internal",
            "private_ip": "172.16.10.100",
            "public_dns": "ec2-18-197-125-88.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.125.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_key_pair.root",
            "aws_network_interface.nic",
            "aws_security_group.allow_http",
            "aws_security_group.allow_https",
            "aws_security_group.allow_k3s",
            "aws_security_group.allow_mqtt",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087924c9e0410af37",
            "arn": "arn:aws:ec2:eu-central-1:584871003262:instance/i-03c1b686441b0df93",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CloudWatchAgentServer",
            "id": "i-03c1b686441b0df93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "termite-cloud-infrastructure-root-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-090c8c951b3ce9fb8"
              }
            ],
            "primary_network_interface_id": "eni-090c8c951b3ce9fb8",
            "private_dns": "ip-172-16-10-100.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.100",
            "public_ip": "18.197.125.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "termite-cloud-infrastructure"
                },
                "throughput": 125,
                "volume_id": "vol-01d14257747eeed96",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b7debcfbb3767c8",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-020f7558a3287bc5e",
              "sg-0b7ed3754d2f75496",
              "sg-0d0318f80b5a4bb0c",
              "sg-0f7296b07f38891fe"
            ]
          },
          "dependencies": [
            "aws_key_pair.root",
            "aws_network_interface.nic",
            "aws_security_group.allow_http",
            "aws_security_group.allow_https",
            "aws_security_group.allow_k3s",
            "aws_security_group.allow_mqtt",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:internet-gateway/igw-03cc21e32661bb158",
            "id": "igw-03cc21e32661bb158",
            "owner_id": "584871003262",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "vpc_id": "vpc-02abdbe0bc16ba9c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:network-interface/eni-090c8c951b3ce9fb8",
            "attachment": [
              {
                "attachment_id": "eni-attach-06294bda28193ebfa",
                "device_index": 0,
                "instance": "i-03c1b686441b0df93"
              }
            ],
            "id": "eni-090c8c951b3ce9fb8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:b7:a5:61:f7:00",
            "owner_id": "584871003262",
            "private_ip": "172.16.10.100",
            "private_ip_list": [
              "172.16.10.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-004ea87f5d2c8973b",
              "sg-020f7558a3287bc5e",
              "sg-0b7ed3754d2f75496",
              "sg-0d0318f80b5a4bb0c",
              "sg-0f7296b07f38891fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b7debcfbb3767c8",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            }
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_security_group.allow_https",
            "aws_security_group.allow_k3s",
            "aws_security_group.allow_mqtt",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:route-table/rtb-02ee5bf209b3fdd21",
            "id": "rtb-02ee5bf209b3fdd21",
            "owner_id": "584871003262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03cc21e32661bb158",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-02abdbe0bc16ba9c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tch_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090248021e5d359a4",
            "route_table_id": "rtb-02ee5bf209b3fdd21",
            "subnet_id": "subnet-00b7debcfbb3767c8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main_rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:security-group/sg-0d0318f80b5a4bb0c",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0318f80b5a4bb0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "584871003262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-02abdbe0bc16ba9c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:security-group/sg-020f7558a3287bc5e",
            "description": "Allow HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020f7558a3287bc5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from the internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "584871003262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_k3s"
            },
            "tags_all": {
              "Name": "allow_k3s"
            },
            "timeouts": null,
            "vpc_id": "vpc-02abdbe0bc16ba9c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:security-group/sg-0f7296b07f38891fe",
            "description": "Allow K3S inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7296b07f38891fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "K3S from the internet",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "allow_k3s",
            "name_prefix": "",
            "owner_id": "584871003262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_k3s"
            },
            "tags_all": {
              "Name": "allow_k3s"
            },
            "timeouts": null,
            "vpc_id": "vpc-02abdbe0bc16ba9c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_mqtt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:security-group/sg-004ea87f5d2c8973b",
            "description": "Allow MQTT inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004ea87f5d2c8973b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MQTT from the internet",
                "from_port": 31883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31883
              }
            ],
            "name": "allow_mqtt",
            "name_prefix": "",
            "owner_id": "584871003262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mqtt"
            },
            "tags_all": {
              "Name": "allow_mqtt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02abdbe0bc16ba9c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:security-group/sg-0b7ed3754d2f75496",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7ed3754d2f75496",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "584871003262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02abdbe0bc16ba9c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:subnet/subnet-00b7debcfbb3767c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b7debcfbb3767c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584871003262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "vpc_id": "vpc-02abdbe0bc16ba9c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:vpc/vpc-02abdbe0bc16ba9c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ccbd88327d953279",
            "default_route_table_id": "rtb-0763de84e1c17b9c6",
            "default_security_group_id": "sg-028d2310436da86f9",
            "dhcp_options_id": "dopt-0d918768184a27df4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02abdbe0bc16ba9c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0763de84e1c17b9c6",
            "owner_id": "584871003262",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            }
          }
        }
      ]
    }
  ]
}